# Math-Optim-Rust

./: Cargo.toml  README.md
src/: 01knapsack.rs  multi_period_planning.rs
