[package]
name = "Math-Optim-Rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = { version = "*", features = ["coin_cbc"], default-features = false }
# good_lp = { version = "*", features = ["highs"], default-features = false }
# good_lp = { version = "*", features = ["lpsolve"], default-features = false }
# good_lp = { version = "*", features = ["minilp"], default-features = false }
# good_lp = { version = "*", features = ["lp-solvers"], default-features = false }

[[bin]]
name = "01knapsack"
path = "src/01knapsack.rs"

[[bin]]
name = "mpp"
path = "src/multi_period_planning.rs"